After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683528 - Ambiguous error message when printer doesn't support PostScript
Ambiguous error message when printer doesn't support PostScript
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: printing
3.5.x
Other Linux
: Normal minor
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-06 19:22 UTC by evince2233
Modified: 2012-12-06 13:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Update PostScript printer error message with friendlier alternative (879 bytes, patch)
2012-09-06 19:22 UTC, evince2233
none Details | Review
Updated 'diff -u' version of patch. (586 bytes, patch)
2012-09-07 13:40 UTC, evince2233
none Details | Review
Update PostScript printer error message with friendlier alternative everywhere (45.48 KB, patch)
2012-09-07 17:57 UTC, evince2233
none Details | Review
Dutch translation fixed (51.95 KB, patch)
2012-09-07 20:26 UTC, harkemasije
none Details | Review
Polish and Czech translation for new error message (943 bytes, patch)
2012-09-07 20:59 UTC, evince2233
none Details | Review
French translation of new error message (497 bytes, patch)
2012-09-07 21:36 UTC, a59910
none Details | Review

Description evince2233 2012-09-06 19:22:06 UTC
Created attachment 223693 [details] [review]
Update PostScript printer error message with friendlier alternative

If the printer does not support PostScript Evince responds with the error message "Printing is not supported on this printer." which is useless and confusing.

I have included a patch which changes the message to "PostScript is not supported by this printer." This at least lets the user know the source of the problem.

Reddit discussion regarding ambiguous error message:
http://www.reddit.com/r/linux/comments/zg7eo/this_is_one_of_the_weirdest_error_messages_i_ever/
Comment 1 evince2233 2012-09-07 13:40:44 UTC
Created attachment 223764 [details] [review]
Updated 'diff -u' version of patch.
Comment 2 evince2233 2012-09-07 17:57:04 UTC
Created attachment 223784 [details] [review]
Update PostScript printer error message with friendlier alternative everywhere

I forgot to update the .po files as well. Sorry about that. Please help translate!
Comment 3 harkemasije 2012-09-07 20:26:25 UTC
Created attachment 223789 [details] [review]
Dutch translation fixed

This fixes the Dutch translation for this bug.
Comment 4 evince2233 2012-09-07 20:59:34 UTC
Created attachment 223790 [details] [review]
Polish and Czech translation for new error message
Comment 5 evince2233 2012-09-07 21:01:06 UTC
Comment on attachment 223790 [details] [review]
Polish and Czech translation for new error message

Thanks to soeb for the translation
Comment 6 a59910 2012-09-07 21:36:21 UTC
Created attachment 223793 [details] [review]
French translation of new error message

Translation in French of the error message filed in this report.
Comment 7 José Aliste 2012-09-07 22:01:10 UTC
Please note that usually translations are committed directly to the repository by translators, not attached here. Note also that we are currently in String Freeze period, so Carlos, should we ask a freeze break for this? Or just wait for 3.8?
Comment 8 Carlos Garcia Campos 2012-09-09 09:43:59 UTC
Yes, please, don't include translations in the patch, simple change the string, and we will ask for a string freeze break
Comment 9 Carlos Garcia Campos 2012-09-09 14:12:16 UTC
Btw, what the error message tried to say is that evince doesn't support printing for that printer because the printer doesn't support postscript. When using the export interface, evince exports the document to a ps file that is sent to the printer, if the printer doesn't support postscript, printing won't be supported that printer.
Comment 10 José Aliste 2012-12-05 02:04:26 UTC
Carlos, can we commit this now in master?
Comment 11 Carlos Garcia Campos 2012-12-06 11:19:43 UTC
Yes, feel free to push it (without the translations)
Comment 12 José Aliste 2012-12-06 13:00:45 UTC
Pushed to master