libview: Correct error message when postscript not supported

see https://bugzilla.gnome.org/show_bug.cgi?id=683528